完善登录注册功能

--- a/src/i18n/zh-CN.yaml
+++ b/src/i18n/zh-CN.yaml
@@ -1,56 +1,63 @@
 # 简体中文语言包
 # 头部
-Head :
-  Title : '设备保养管理系统'
+Head:
+  Title: '设备保养管理系统'
 # 异常
-Exception :
-  Title : '访问异常'
-  SubTitle : '无访问权限或无指定路径界面'
-  Text : '秒后自动跳转至登录界面'
+Exception:
+  Title: '访问异常'
+  SubTitle: '无访问权限或无指定路径界面'
+  Text: '秒后自动跳转至登录界面'
 # 注册登录界面
-Login :
+Login:
   # 公共
-  LoginTitle : '登录账户'
-  LoginImmediately : '立即登录'
-  UsernameInputText : '请输入用户名'
-  PasswordInputText : '请输入密码'
-  ResetPassword : '重置密码'
-  RegisterAccount : '注册账户'
-  CreateAnAccount : '创建账户'
-  ReenterThePassword : '再次输入密码'
+  LoginTitle: '登录账户'
+  LoginImmediately: '立即登录'
+  UsernameInputText: '请输入用户名'
+  PasswordInputText: '请输入密码'
+  ResetPassword: '重置密码'
+  RegisterAccount: '注册账户'
+  CreateAnAccount: '创建账户'
+  ReenterThePassword: '再次输入密码'
   # 基本界面
-  Basic :
-    LoginSubtitle : '输入账户密码进行进入系统'
-    RememberMe : '记住我'
-    RegistrationTips : '没有账号? 去注册'
-    LoginTips : '已有账户? 去登录'
-    RegisterSubtitle : '请在下方输入信息进行注册'
+  Basic:
+    LoginSubtitle: '输入账户密码进行进入系统'
+    RememberMe: '记住我'
+    RegistrationTips: '没有账号? 去注册'
+    LoginTips: '已有账户? 去登录'
+    RegisterSubtitle: '请在下方输入信息进行注册'
   # 拟态界面
-  Mimicry :
-    AutomaticLogin : '记住账户密码自动登录'
-    GoToRegister : '去注册'
-    GoToLogin : '去登录'
-    RegisterTitle : '欢迎回来 !'
-    RegisterSubtitle : '持续在线请使用个人信息登录'
-    LoginButton : '登录'
-    LoginTitle : '你好朋友 !'
-    LoginSubtitle : '输入你的信息进行注册'
-    RegisterButton : '注册'
-  PasswordReset :
-    Steps1 : '邮箱验证'
-    Steps2 : '密码重置'
-    StepsTips1 : '输入用户名向邮箱发送验证码验证'
-    StepsTips2 : '输入新密码完成密码重置'
-    AuxiliarySteps1 : '重置请求'
-    AuxiliarySteps2 : '管理员审核'
-    AuxiliarySteps3 : '密码重置'
-    AuxiliaryTips1 : '输入用户名发送重置请求'
+  Mimicry:
+    AutomaticLogin: '记住账户密码自动登录'
+    GoToRegister: '去注册'
+    GoToLogin: '去登录'
+    RegisterTitle: '欢迎回来 !'
+    RegisterSubtitle: '持续在线请使用个人信息登录'
+    LoginButton: '登录'
+    LoginTitle: '你好朋友 !'
+    LoginSubtitle: '输入你的信息进行注册'
+    RegisterButton: '注册'
+  # 重置密码界面
+  PasswordReset:
+    Steps1: '邮箱验证'
+    Steps2: '密码重置'
+    StepsTips1: '输入用户名向邮箱发送验证码验证'
+    StepsTips2: '输入新密码完成密码重置'
+    AuxiliarySteps1: '重置请求'
+    AuxiliarySteps2: '管理员审核'
+    AuxiliarySteps3: '密码重置'
+    AuxiliaryTips1: '输入用户名发送重置请求'
 
-    InputPassword : '输入新密码'
+    InputPassword: '输入新密码'
 
-    ResetState1 : '等待发起重置请求'
-    ResetState2 : '等待管理员审核'
-    ResetState3 : '请输入新密码进行重置'
-    ResetGet : '发出重置请求'
-    StatusRefresh : '刷新状态'
-    ImmediateReset : '立即重置'
+    ResetState1: '等待发起重置请求'
+    ResetState2: '等待管理员审核'
+    ResetState3: '请输入新密码进行重置'
+    ResetGet: '发出重置请求'
+    StatusRefresh: '刷新状态'
+    ImmediateReset: '立即重置'
+  # 打字动画
+  Typing:
+    Animation1: '欢迎 ! !'
+    Animation2: '欢迎来到设备保养管理平台 !👋'
+    Animation3: '在这里，你可以管理设备保养相关的所有事务 ! !'
+    Animation4: '欢迎来到设备保养管理平台 !'
