完善全局加载功能

--- a/src/i18n/CN.yaml
+++ b/src/i18n/CN.yaml
@@ -42,19 +42,26 @@ Login:
     Steps2: '密码重置'
     StepsTips1: '输入用户名向邮箱发送验证码验证'
     StepsTips2: '输入新密码完成密码重置'
+    StepsTips3: '输入用户名发送重置请求'
     AuxiliarySteps1: '重置请求'
     AuxiliarySteps2: '管理员审核'
     AuxiliarySteps3: '密码重置'
-    AuxiliaryTips1: '输入用户名发送重置请求'
-
-    InputPassword: '输入新密码'
-
-    ResetState1: '等待发起重置请求'
-    ResetState2: '等待管理员审核'
-    ResetState3: '请输入新密码进行重置'
-    ResetGet: '发出重置请求'
-    StatusRefresh: '刷新状态'
-    ImmediateReset: '立即重置'
+    ExitReset: '退出重置'
+    Tab1: '邮箱验证'
+    Tab2: '管理员辅助重置'
+    EnterAccountName: '输入账户名'
+    InputValidationCode: '输入验证码'
+    SendVerificationCode: '发送验证码'
+    NextSteps: '下一步'
+    EnterNewPassword: '输入新密码'
+    EnterTheNewPasswordAgain: '再次输入新密码'
+    ConfirmReset: '确认重置'
+    ResetRequestOccurred: '发生重置请求'
+    AuditStatus1: '管理员审核中'
+    AuditStatus2: '审核不通过'
+    AuditStatus3: '审核通过'
+    RefreshStatus: '刷新状态'
+    ClearCache: '清除缓存,重新开始'
   # 打字动画
   Typing:
     Animation1: '欢迎 ! !'
